# energy_data_processor

./: README.md  entrypoint_get_daily_stats.py  entrypoint_produce_daily_report.py  entrypoint_run_script.py  pyproject.toml  requirements.txt  throughput_calculator_app.py
docs/: setup.md
processors/: power_to_energy_processor.py
src/energize/: throughput_calculator_app.py
src/energize/processors/: power_to_energy_processor.py
src/energize/visualizers/: daily_energy_report.py
visualizers/: daily_energy_report.py
